z-index is fixed above modal-fade's z-index

--- a/src/client/components/dropdown-panel/index.css
+++ b/src/client/components/dropdown-panel/index.css
@@ -10,5 +10,5 @@
 }
 .dropdown-panel {
     position: relative;
-    z-index: 999
+    z-index: 1041;
 }
